[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.11.2"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

serde = { version = "1.0", features = ["derive"] }
